Fix mobile Book Now button visibility (override inline style)

--- a/css/style.css
+++ b/css/style.css
@@ -2615,7 +2615,7 @@ img {
     }
 
     .nav-menu .nav-book-mobile {
-        display: list-item;
+        display: list-item !important;
     }
 
     .nav-book-mobile a {
